--- a/layouts/partials/components/contact-component.html
+++ b/layouts/partials/components/contact-component.html
@@ -1,4 +1,4 @@
-<section class="section-dark" style="background-image: url({{ .cUrl }}w_1600,q_50{{ .Params.background_image }})">
+<section class="section-dark" style="background-image: url({{ .cUrl }}w_1600,q_50,f_auto{{ .Params.background_image }})">
     <div class="image-overlay"></div>
     <div class="container contact-form">
         <div class="flex-row reverse">
