--- a/layouts/partials/components/content-left.html
+++ b/layouts/partials/components/content-left.html
@@ -1,12 +1,13 @@
 <section class="section-light">
     {{ $m := .cLeft.style.mask }}
-    <div {{ if eq $m "large to small" -}}class="polygon-large-to-small"{{- end }}{{ if eq $m "small to large" -}}class="polygon-small-to-large"{{- end }} style="background-image: url({{ .cUrl }}w_1600,q_50{{ .cLeft.style.background_image }})">
+    <div {{ if eq $m "large to small" -}}class="polygon-large-to-small"{{- end }}{{ if eq $m "small to large" -}}class="polygon-small-to-large"{{- end }} style="background-image: url({{ .cUrl }}w_1600,q_50,f_auto{{ .cLeft.style.background_image }})">
         <div class="div-block _2"></div>
     </div>
     <div class="container">
         <div class="flex-row">
             <div class="hero-content-copy">
-                {{ .cLeft.content | markdownify }}
+                {{ $c := .cLeft.content | markdownify }}
+                {{ replace $c "https://res.cloudinary.com/modii/" "https://res.cloudinary.com/modii/w_750,q_50,f_auto/" | safeHTML }}
                 {{ if eq .cLeft.button_settings.show true }}
                 {{ $l := replace .cLeft.button_settings.link ".md" "" }}
                 <a href="{{ $l }}" class="hero-button w-inline-block">
@@ -17,7 +18,7 @@
             {{ if ne .cLeft.media.media_type "none" }}
             <div class="hero-content flex-grow hero-video-container">
                 {{ if eq .cLeft.media.media_type "image" }}
-                    <img {{ if eq .cLeft.media._3d true -}}class="_3d"{{- end }} src="{{ .cUrl }}w_700,q_80{{ .cLeft.style.background_image }}"/>
+                    <img {{ if eq .cLeft.media._3d true -}}class="_3d"{{- end }} src="{{ .cUrl }}w_700,q_80,f_auto{{ .cLeft.style.background_image }}"/>
                 {{ end }}
                 {{ if eq .cLeft.media.media_type "youtube video"}}
                 {{- $v := replace .cLeft.media.youtube_url "https://www.youtube.com/watch?v=" "" -}} {{- $v2 := replace $v "https://youtu.be/" "" -}}
