--- a/static/css/insurancesmart.css
+++ b/static/css/insurancesmart.css
@@ -1874,7 +1874,6 @@ address {
   border-radius: 100px;
   background-position: 50% 50%;
   background-size: cover;
-  background-image: URL('https://res.cloudinary.com/modii/w_150,h_150,c_fill,q_80,g_face/v1530419489/insurancesmart/49545_kill_la_kill.jpg')
 }
 
 .f-blog-title-small {
@@ -1966,7 +1965,7 @@ address {
   border-radius: 100px;
   background-position: 50% 50%;
   background-size: cover;
-  background-image: URL('https://res.cloudinary.com/modii/w_150,h_150,c_fill,q_80,g_face/v1530419489/insurancesmart/49545_kill_la_kill.jpg')
+  background-image: URL('https://res.cloudinary.com/modii/w_150,h_150,c_fill,q_80,g_face,f_auto/v1530419489/insurancesmart/49545_kill_la_kill.jpg')
 }
 
 .text-field-2 {
