add background image to top section

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -36,7 +36,7 @@
             </div>
         </div>
     </div>
-    <div class="polygon-small-to-large">
+    <div class="polygon-small-to-large" style="background-image: url({{ $.Site.Params.cloudinary_url }}w_960,q_60,f_auto{{ .Params.banner_media.background_image }})">
         <div class="div-block _2"></div>
     </div>
 </section>
