fix link for "get smart"

--- a/layouts/partials/main-nav.html
+++ b/layouts/partials/main-nav.html
@@ -49,7 +49,7 @@
             </div>
         </div>
     </div>
-    <a href="/blog" class="nav-link w-inline-block">
+    <a href="/posts" class="nav-link w-inline-block">
         <div class="nav-link-text">Get Smart</div>
     </a>
     <div class="nav-link dropdown-trigger">
